# category-exercises

./: README.md  scratch.md
exercise01/: Main.hs  exercise01.cabal
