cabal-version:       2.4
name:                exercise01
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Liam Goodacre
maintainer:          goodacre.liam@gmail.com

library
  exposed-modules:     Main
  build-depends:       base ^>=4.12.0.0
  default-language:    Haskell2010

